# crewai-proj2

./: README.md
ai_news/: pyproject.toml
ai_news/news/: 2025-07-05_10-03-11_news_article.md  2025-07-05_10-08-04_news_article.md
ai_news/src/ai_news/: crew.py  main.py
lastest_crew/: README.md  pyproject.toml  report.md
lastest_crew/src/lastest_crew/: crew.py  main.py
meeting_minutes/: README.md  pyproject.toml
meeting_minutes/src/meeting_minutes/: main.py
meeting_minutes/src/meeting_minutes/crews/gmailcrew/: gmailcrew.py
meeting_minutes/src/meeting_minutes/crews/meeting_minutes_crew/: meeting_minutes_crew.py
poem_flow/: poem.txt  pyproject.toml
poem_flow/src/poem_flow/: main.py
stock_trading/: pyproject.toml
stock_trading/src/research_crew/: crew.py  main.py
stock_trading/src/research_crew/config/: agents.yaml  tasks.yaml
stock_trading/src/research_crew/tools/: stock_research_tools.py
