[project]
name = "lastest_crew"
version = "0.1.0"
description = "lastest-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
lastest_crew = "lastest_crew.main:run"
run_crew = "lastest_crew.main:run"
train = "lastest_crew.main:train"
replay = "lastest_crew.main:replay"
test = "lastest_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
